# graphvx

./: LICENSE  README.md  pyproject.toml  requirements.txt
examples/: basic_example.py  gpu_test.py  monolithic_example.py
src/graphvx_core/: __init__.py  graph_converter.py  graphvx.py  hooks.py
src/graphvx_core/solvers/: cvxpy_admm.py  monolithic.py  utils.py
src/graphvx_core/solvers/dispatchers/: dispatcher.py  multiprocessing.py  multithreading.py  sequential.py
src/graphvx_core/solvers/iteration_schemes/: admm_fast.py  admm_nesterov.py  admm_nesterov_reset.py  admm_vanilla.py  iteration_scheme.py
src/graphvx_core/solvers/iteration_solvers/: cvxpy_admm_solvers.py  iteration_solver.py
src/graphvx_core/vectorizer/: cvxpy_vectorizer.py  numpy_vectorizer.py
