[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graphvx"
version = "0.0.1"
authors = [
  { name="Nicolas Kessler", email="author@example.com" },
]
description = "Distributed optimization with cvxpy and networkx"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
#    "License :: BSD Open-Source License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/graphvx_core"]
